# my-tv

./: HISTORY.md  settings.gradle
.github/workflows/: build-speedtest.yml  main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lizongying/mytv/: InfoFragment.kt  MainActivity.kt  MainFragment.kt  PlayerFragment.kt  SP.kt  SettingFragment.kt  SpeedtestDialogFragment.kt  Utils.kt
app/src/main/java/com/lizongying/mytv/api/: ApiClient.kt  LiveInfo.kt  TimeResponse.kt
app/src/main/java/com/lizongying/mytv/models/: ProgramType.kt  TV.kt  TVList.kt  TVViewModel.kt
app/src/main/java/com/lizongying/mytv/requests/: ReleaseRequest.kt
app/src/main/java/com/mytv/: BootReceiver.kt  CardAdapter.kt  ChannelFragment.kt  ErrorFragment.kt  HardwareIjkPlayer.kt  InfoFragment.kt  InitializerProvider.kt  ItemDecoration.kt  LoadingFragment.kt  MainActivity.kt  MainFragment.kt  MyTVApplication.kt  NetworkChangeReceiver.kt  NoTunnelingExoPlayer.kt  PlayerFragment.kt  SP.kt  SettingFragment.kt  SpeedtestDialogFragment.kt  SpeedtestForegroundService.kt  TimeFragment.kt  UpdateWorker.kt
app/src/main/java/com/mytv/speedtest/: NativeSpeedtestRunner.kt  SpeedtestManager.kt
app/src/main/res/drawable/: rounded_dialog.xml
app/src/main/res/layout/: dialog_speedtest.xml  info.xml  player.xml  setting.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
iptv-speedtest/: Cargo.toml  Dockerfile  Dockerfile.prebuilt  docker-compose.yml
iptv-speedtest/src/: channel.rs  config.rs  main.rs  output.rs  speedtest.rs  task.rs
(+5 files in other folders)
